--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: "Roboto";
+}
+.home-body {
   position: fixed;
   top: 0;
   bottom: 0;
@@ -97,7 +100,7 @@ main .main-button-container {
   align-items: center;
   justify-items: center;
 }
-main {
+main .super-main-container {
   height: 100%;
 }
 main .main-button {
@@ -115,4 +118,39 @@ main .main-button:hover {
 main .main-button a {
   font-size: 19px;
   font-family: "Roboto";
+}
+
+/* estilos de blogs.html*/
+
+.blogs-main {
+  display: grid;
+}
+.blogs-news-container {
+  background-color: #e6e9ed;
+  padding: 0px 50px 40px;
+}
+.blogs-main-new {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 2fr;
+}
+.blogs-news-img-container {
+  grid-column: 1;
+}
+.blogs-news-img-container img {
+  width: 85%;
+}
+.blogs-news-info-container {
+  grid-column: 2;
+}
+.blogs-news-info-container p {
+  margin-bottom: 35px;
+}
+.blogs-posts-container {
+  padding: 0 50px 40px;
+}
+.blogs-posts-container h3 {
+  border-bottom: 1px solid #e6e9ed;
+  padding-bottom: 20px;
+  text-align: center;
 }
