--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@ body {
   left: 0;
   right: 0;
 }
+.grid-container {
+  max-width: 980px;
+  margin: auto;
+}
 a {
   text-decoration: none;
   display: inline;
@@ -69,6 +73,8 @@ nav .profile-link a:hover {
   background-color: #96f0d9;
   border-radius: 5px;
   width: 120px;
+  padding: 5px;
+  text-align: center;
 }
 nav .profile-link a {
   color: black;
@@ -149,8 +155,94 @@ main .main-button a {
 .blogs-posts-container {
   padding: 0 50px 40px;
 }
+.blogs-posts-container div {
+}
 .blogs-posts-container h3 {
   border-bottom: 1px solid #e6e9ed;
   padding-bottom: 20px;
   text-align: center;
+}
+.blogs-button {
+  border: 1px solid #47cfac;
+  padding: 10px 15px;
+  font-size: 12px;
+  font-weight: bold;
+  color: white;
+  background-color: #47cfac;
+}
+.blogs-posts-container .post-container {
+  display: inline-block;
+  padding-left: 10px;
+  max-width: 30%;
+  margin-bottom: 50px;
+}
+.blogs-posts-container .post-container p {
+  margin-bottom: 35px;
+}
+.blogs-posts-container .post-container img {
+  width: 100%;
+}
+
+/* footer styles*/
+
+footer {
+  width: 100%;
+  height: 80px;
+  background-color: #22272d;
+  border-top: 35px solid #47cfac;
+  text-align: center;
+}
+footer p {
+  color: aliceblue;
+  margin-top: 30px;
+}
+
+/* blog styles*/
+
+.blogpost-img-container {
+  padding: 0px 50px 40px;
+}
+.blogpost-img-container img {
+  width: 100%;
+}
+.blogpost-main-container {
+  padding: 0 50px 40px;
+}
+.blogpost-main-container h3 {
+  border-bottom: 1px solid #e6e9ed;
+  padding-bottom: 20px;
+}
+.blogpost-main-container article h1 {
+  font-size: 35px;
+}
+
+/* contact styles*/
+
+.contact-main-container {
+  height: 300px;
+  align-content: center;
+  width: 100%;
+  background-color: #e6e9ed;
+  display: grid;
+  grid-template-columns: 1fr 3fr 3fr 1fr;
+}
+.contact-main-container .contact-left {
+  grid-column: 2;
+}
+.contact-main-container .contact {
+  display: grid;
+  grid-template-columns: fit-content(35px) 1fr;
+}
+.contact-img {
+  width: 90px;
+}
+.contact .contact-text-container {
+  padding: 10px;
+  margin: 5px;
+}
+.contact .contact-text-container a {
+  border-bottom: 1px solid black;
+}
+.contact .contact-text-container p {
+  padding-right: 90px;
 }
