--- a/css/main.css
+++ b/css/main.css
@@ -243,6 +243,70 @@ footer p {
 .contact .contact-text-container a {
   border-bottom: 1px solid black;
 }
+.contact .contact-text-container a:hover {
+  background-color: #96f0d9;
+  border-radius: 5px;
+  width: 120px;
+  padding: 5px;
+  text-align: center;
+}
 .contact .contact-text-container p {
   padding-right: 90px;
+}
+
+/* estilos del perfil*/
+
+.perfil-main {
+  display: grid;
+}
+.perfil-news-container {
+  background-color: #e6e9ed;
+  padding: 0px 50px 40px;
+}
+.perfil-main-new {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 2fr;
+}
+.perfil-news-img-container {
+  grid-column: 1;
+}
+.perfil-news-img-container img {
+  width: 85%;
+}
+.perfil-news-info-container {
+  grid-column: 2;
+}
+.perfil-news-info-container p {
+  margin-bottom: 35px;
+}
+.perfil-posts-container {
+  padding: 0 50px 40px;
+}
+.perfil-posts-container div {
+}
+.perfil-posts-container h3 {
+  border-bottom: 1px solid #e6e9ed;
+  padding-bottom: 20px;
+  text-align: center;
+}
+.perfil-button {
+  border: 1px solid #47cfac;
+  padding: 10px 15px;
+  font-size: 12px;
+  font-weight: bold;
+  color: white;
+  background-color: #47cfac;
+}
+.perfil-posts-container .post-container {
+  display: inline-block;
+  padding-left: 10px;
+  max-width: 30%;
+  margin-bottom: 50px;
+}
+.perfil-posts-container .post-container p {
+  margin-bottom: 35px;
+}
+.perfil-posts-container .post-container img {
+  width: 100%;
 }
